--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>javaScript</title>
+<!--     <script type="module" src="module.js"></script>
+    <script defer src="index.js"></script>   -->
 </head>
 <body>
     <h1>people enterd</h1>
     <h2 id="count-el">0</h2>
-    
+    <button id="increment" onclick="increment()">INCRIMENT</button>
+    <button id="save-btn" onclick="save()">save</button>
+
 
     <script src="index.js"></script>
+
 </body>
 </html>
