added  passenger counter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <button id="increment" onclick="increment()">INCRIMENT</button>
     <button id="save-btn" onclick="save()">save</button>
 
+    <p id="save-el">previous entre </p>
 
+<!--     <p id="wellcome-el"></p> -->
     <script src="index.js"></script>
 
 </body>
